crates/dbt-jinja/minijinja/tests/snapshots/test_lexer__lexer@line-comment.txt.snap
---
source: crates/dbt-jinja/minijinja/tests/test_lexer.rs
description: "## this is a comment\n## that shall disappear entirely\n<ul>\n  # for item in seq\n    <li>{{ item }}</li>  ## this is another line comment\n\n  # endfor\n</ul>\n## trailing comment"
input_file: crates/dbt-jinja/minijinja/tests/lexer-inputs/line-comment.txt
---
Comment
  "## this is a comment\n"
Comment
  "## that shall disappear entirely\n"
TemplateData("<ul>\n")
  "<ul>\n"
BlockStart
  "#"
Ident("for")
  "for"
Ident("item")
  "item"
Ident("in")
  "in"
Ident("seq")
  "seq"
BlockEnd
  "\n"
TemplateData("    <li>")
  "    <li>"
VariableStart
  "{{"
Ident("item")
  "item"
VariableEnd
  "}}"
TemplateData("</li>  ")
  "</li>  "
Comment
  "## this is another line comment\n"
TemplateData("\n")
  "\n"
BlockStart
  "#"
Ident("endfor")
  "endfor"
BlockEnd
  "\n"
TemplateData("</ul>\n")
  "</ul>\n"
Comment
  "## trailing comment"
