crates/dbt-jinja/minijinja/tests/snapshots/test_lexer__lexer@lstrip-blocks.txt.snap
---
source: minijinja/tests/test_lexer.rs
description: "<ul>\n  {% for item in seq %}\n    <li>{{ item }}</li>\n  {% endfor %}\n</ul>\n\n<ul>\n  {% for item in seq %}\n    {{ item }}\n  {% endfor %}\n</ul>"
input_file: minijinja/tests/lexer-inputs/lstrip-blocks.txt
---
TemplateData("<ul>\n")
  "<ul>\n"
BlockStart
  "{%"
Ident("for")
  "for"
Ident("item")
  "item"
Ident("in")
  "in"
Ident("seq")
  "seq"
BlockEnd
  "%}"
TemplateData("    <li>")
  "    <li>"
VariableStart
  "{{"
Ident("item")
  "item"
VariableEnd
  "}}"
TemplateData("</li>\n")
  "</li>\n"
BlockStart
  "{%"
Ident("endfor")
  "endfor"
BlockEnd
  "%}"
TemplateData("</ul>\n\n<ul>\n")
  "</ul>\n\n<ul>\n"
BlockStart
  "{%"
Ident("for")
  "for"
Ident("item")
  "item"
Ident("in")
  "in"
Ident("seq")
  "seq"
BlockEnd
  "%}"
TemplateData("    ")
  "    "
VariableStart
  "{{"
Ident("item")
  "item"
VariableEnd
  "}}"
TemplateData("\n")
  "\n"
BlockStart
  "{%"
Ident("endfor")
  "endfor"
BlockEnd
  "%}"
TemplateData("</ul>")
  "</ul>"
