crates/dbt-jinja/minijinja/tests/snapshots/test_lexer__lexer@no-trim-blocks.loop.txt.snap
---
source: minijinja/tests/test_lexer.rs
description: "{% for item in seq %}\n  {{ item }}\n{% endfor %}"
input_file: minijinja/tests/lexer-inputs/no-trim-blocks.loop.txt
---
BlockStart
  "{%"
Ident("for")
  "for"
Ident("item")
  "item"
Ident("in")
  "in"
Ident("seq")
  "seq"
BlockEnd
  "%}"
TemplateData("\n  ")
  "\n  "
VariableStart
  "{{"
Ident("item")
  "item"
VariableEnd
  "}}"
TemplateData("\n")
  "\n"
BlockStart
  "{%"
Ident("endfor")
  "endfor"
BlockEnd
  "%}"

