crates/dbt-jinja/minijinja/tests/snapshots/test_lexer__lexer@raw.txt.snap
---
source: minijinja/tests/test_lexer.rs
description: "before {% raw %} this is a {{ raw }} {% block %} {% endraw %} after\n\nbefore {%- raw %} this is a {{ raw }} {% block %} {% endraw -%} after\n\nbefore {%- raw -%} this is a {{ raw }} {% block %} {%- endraw -%} after"
input_file: minijinja/tests/lexer-inputs/raw.txt
---
TemplateData("before ")
  "before "
TemplateData(" this is a {{ raw }} {% block %} ")
  " this is a {{ raw }} {% block %} "
TemplateData(" after\n\nbefore")
  " after\n\nbefore"
TemplateData(" this is a {{ raw }} {% block %} ")
  " this is a {{ raw }} {% block %} "
TemplateData("after\n\nbefore")
  "after\n\nbefore"
TemplateData("this is a {{ raw }} {% block %}")
  " this is a {{ raw }} {% block %} "
TemplateData("after")
  "after"

